# tello_example

./: .gitignore  CMakeLists.txt
cmake/: FindOpenCV.cmake  Findffmpeg.cmake  Findtello_lib.cmake
cmake/opencv/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
lib/: CMakeLists.txt  tello.cmake
lib/opencv/: ade.lib  ippiw.lib  ittnotify.lib  libjasper.lib  libjpeg-turbo.lib  libpng.lib  libtiff.lib  libwebp.lib  opencv_calib3d430.exp  opencv_calib3d430.lib  opencv_core430.exp  opencv_core430.lib  opencv_dnn430.exp  opencv_dnn430.lib  opencv_features2d430.exp  opencv_features2d430.lib  opencv_flann430.exp  opencv_flann430.lib  opencv_gapi430.exp  opencv_gapi430.lib  opencv_highgui430.exp  opencv_highgui430.lib  opencv_imgcodecs430.exp  opencv_imgcodecs430.lib  opencv_imgproc430.exp  opencv_imgproc430.lib  opencv_ml430.exp  opencv_ml430.lib  opencv_objdetect430.exp  opencv_objdetect430.lib  opencv_photo430.exp  opencv_photo430.lib  opencv_stitching430.exp  opencv_stitching430.lib  opencv_video430.exp  opencv_video430.lib  opencv_videoio430.exp  opencv_videoio430.lib  quirc.lib  zlib.lib
lib/shared/: CMakeLists.txt  H264Decoder.cpp  frame_grabber.cpp  frame_grabber.hpp
projects/: CMakeLists.txt
projects/01_frame_grabber/: CMakeLists.txt
projects/01_frame_grabber/src/: main.cpp
projects/visual_controller/: CMakeLists.txt
projects/visual_controller/src/: CMakeLists.txt  camera.h  controller.cpp  controller.hpp  main.cpp  shader.fs  shader.h  shader.vs  types.h  vertexarray.h  (+3 more)
src/: CMakeLists.txt  H264Decoder.cpp  H264Decoder.hpp  main.cpp
(+1 files in other folders)
